Fix makemigrations in README, add Pico css

--- a/web/concepts/templates/detail.html
+++ b/web/concepts/templates/detail.html
@@ -1,3 +1,16 @@
-<a href="{{ item.url }}">{{ item.identifier }}</a> <br>
-{{ item.name }} <br>
-{{ item.description }}
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+    <title>mathswitch</title>
+  </head>
+  <body>
+    <main class="container">
+        <a href="{{ item.url }}">{{ item.identifier }}</a> <br>
+        {{ item.name }} <br>
+        {{ item.description }}
+    </main>
+  </body>
+</html>
