Make static work on development

--- a/web/concepts/static/concepts/mathswitch.css
+++ b/web/concepts/static/concepts/mathswitch.css
@@ -1,13 +1,15 @@
 footer {
-    border: 1px solid red;
+    text-align: center;
+    /* border: 1px solid red; */
 }
 
 .powered-by-wikidata {
-    content: url("http://imgur.com/SZ8Cm.jpg");
+    content: url("wd-light.png");
+    transform: scale(.5);
 }
 
 @media (prefers-color-scheme: dark) {
     .powered-by-wikidata {
-        content: url("http://imgur.com/SZ8Cm.jpg");
+        content: url("wd-dark.png");
     }
 }
