--- a/web/concepts/templates/index.html
+++ b/web/concepts/templates/index.html
@@ -24,7 +24,7 @@
         <label for="search">This is just a placeholder:</label>
         <input type="search" id="search" name="search" placeholder="Search" />
       </form>
-      <h2>Examples</h2>
+      <h2>Example:</h2>
       <p>By Wikidata identifier: <a href="concept/Wd/Q1369621/">Q1369621</a></p>
     </main>
     <footer class="container">
