--- a/web/concepts/templates/detail.html
+++ b/web/concepts/templates/detail.html
@@ -1,19 +1,11 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
-    <title>mathswitch</title>
-  </head>
-  <body>
-    <main class="container">
-        <a href="{{ item.url }}">{{ item.identifier }}</a> <br>
-        {{ item.name }} <br>
-        {{ item.description }} <br>
-        {% for link in item.links %}
-          <a href="{{ link.url }}">{{ link.source }}: {{ link.name }}</a> <br>
-        {% endfor %}
-    </main>
-  </body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+  <h2>{{ concept.name }}</h2>
+  {% if concept.description != None %}
+    <p>{{ concept.description }}</p>
+  {% endif %}
+  {% for item in concept.items %}
+    <a href="{{ item.url }}">{{ item.source }}: {{ item.name }}</a> <br>
+  {% endfor %}
+{% endblock %}
