Improve the visuals

--- a/web/concepts/templates/base.html
+++ b/web/concepts/templates/base.html
@@ -15,8 +15,7 @@
   <body>
     <header class="container">
       <hgroup>
-        <h1>mathswitch</h1>
-        <p>Infrastructure for relaying and exchanging mathematical concepts.</p>
+        <p><strong><a href="/">mathswitch</a></strong> &mdash; infrastructure for relaying and exchanging mathematical concepts</p>
       </hgroup>
     </header>
     <main class="container">
