--- a/web/concepts/templates/base.html
+++ b/web/concepts/templates/base.html
@@ -16,6 +16,7 @@
     <header class="container">
       <hgroup>
         <p><strong><a href="/">mathswitch</a></strong> &mdash; infrastructure for relaying and exchanging mathematical concepts</p>
+        <p>An experiment in linking up definitions of (almost) the same concept across encyclopedias and libraries.</p>
       </hgroup>
     </header>
     <main class="container">
@@ -23,7 +24,11 @@
         {% endblock %}
     </main>
     <footer class="container">
-        <img class="powered-by-wikidata" alt="Powered by Wikidata" />
+      <p>Mathswitch is developed at University of Ljubljana, Faculty of mathematics and physics.
+        For more information, see the <a href="https://github.com/katjabercic/mathswitch/">mathswitch GitHub repository</a>.
+      </p>
+      <p>This work is supported by project <a href="https://tydiform.fmf.uni-lj.si">TydiForm</a>.</p>
+      <p><img class="powered-by-wikidata" alt="Powered by Wikidata" /></p>
     </footer>
   </body>
 </html>
