--- a/web/concepts/templates/index.html
+++ b/web/concepts/templates/index.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+<h2>Search</h2>
 <form method="GET" action="search/">
   <input type="search" id="q" name="q" placeholder="Search for a concept by name" list="concepts" />
   <datalist id="concepts"> 
@@ -11,11 +12,21 @@
   </datalist>
   <input type="submit" />
 </form>
+
 <h2>Examples</h2>
 <p>
-  <a href="/concept/cauchy%20sequence/">cauchy sequence</a>,
+  <a href="/concept/circuit/">circuit</a>,
   <a href="/concept/mathematical%20group/">mathematical group</a>, 
   <a href="/concept/Stone%20duality/">Stone duality</a>
 </p>
+
+<h2>What is in the database?</h2>
+<p>Mathswitch groups together links to concepts the following libraries and encyclopedias:</p>
+<ul>
+  <li><a href="https://www.wikidata.org/wiki/Wikidata:Main_Page">Wikidata</a>: {{ number_of_links.wikidata }} links to pages,</li>
+  <li><a href="https://ncatlab.org/nlab/show/HomePage">nLab</a>: {{ number_of_links.nlab }} links to pages (via Wikidata),</li>
+  <li><a href="https://mathworld.wolfram.com">Mathworld</a>: {{ number_of_links.mathworld }} links to pages (via Wikidata),</li>
+  <li><a href="https://unimath.github.io/agda-unimath/">Agda Unimath</a>: {{ number_of_links.agda_unimath }} links to documentation in the formal mathematics library.</li>
+</ul>
 
 {% endblock %}
