Minor wording changes.

--- a/web/concepts/templates/base.html
+++ b/web/concepts/templates/base.html
@@ -23,8 +23,8 @@
         {% endblock %}
     </main>
     <footer class="container">
-      <p>Mathswitch is part of the <a href="https://tydiform.fmf.uni-lj.si">TydiForm</a> project at the <a href="https://www.fmf.uni-lj.si/">Faculty of mathematics and physics</a>, University of Ljubljana.
-      See the <a href="https://github.com/katjabercic/mathswitch/">GitHub repository</a>.
+      <p>Supported by the <a href="https://tydiform.fmf.uni-lj.si">TydiForm</a> project at the <a href="https://www.fmf.uni-lj.si/">Faculty of mathematics and physics</a>, University of Ljubljana.
+      (<a href="https://github.com/katjabercic/mathswitch/">GitHub repository</a>)
       </p>
       <p><img class="powered-by-wikidata" alt="Powered by Wikidata" /></p>
     </footer>
