--- a/web/concepts/templates/index.html
+++ b/web/concepts/templates/index.html
@@ -12,7 +12,7 @@
   <input type="submit" />
 </form>
 
-<p>Mathswitch incorporates entries from the following sources:</p>
+<p>Mathswitch collects entries from the following sources:</p>
 <ul>
   <li><a href="https://www.wikidata.org/wiki/Wikidata:Main_Page">Wikidata</a> ({{ number_of_links.wikidata }} entries)</li>
   <li><a href="https://ncatlab.org/nlab/show/HomePage">nLab</a> ({{ number_of_links.nlab }} entries)</li>
