--- a/web/concepts/templates/index.html
+++ b/web/concepts/templates/index.html
@@ -19,6 +19,8 @@
   <li><a href="https://mathworld.wolfram.com">Mathworld</a> ({{ number_of_links.mathworld }} entries)</li>
   <li><a href="https://unimath.github.io/agda-unimath/">Agda Unimath</a> ({{ number_of_links.agda_unimath }} entries)</li>
 </ul>
+<p>The entries are organized into a concept network that connects the same concept appearing in different sources.</p>
+<p>The author of mathswitch is <a href="https://katja.not.si">Katja Berčič</a></p>
 
 <p>Examples:
   <a href="/concept/circuit/">circuit</a>,
