Add ProofWiki and Encyclopedia of Mathematics

--- a/web/concepts/templates/index.html
+++ b/web/concepts/templates/index.html
@@ -26,6 +26,8 @@
   <li><a href="https://www.wikidata.org/wiki/Wikidata:Main_Page">Wikidata</a>: {{ number_of_links.wikidata }} links to pages,</li>
   <li><a href="https://ncatlab.org/nlab/show/HomePage">nLab</a>: {{ number_of_links.nlab }} links to pages (via Wikidata),</li>
   <li><a href="https://mathworld.wolfram.com">Mathworld</a>: {{ number_of_links.mathworld }} links to pages (via Wikidata),</li>
+  <li><a href="https://proofwiki.org/wiki/Main_Page">ProofWiki</a>: {{ number_of_links.proof_wiki }} links to pages (via Wikidata),</li>
+  <li><a href="https://encyclopediaofmath.org/wiki/Main_Page">Encyclopedia of mathematics</a>: {{ number_of_links.encyclopedia_of_mathematics }} links to pages (via Wikidata),</li>
   <li><a href="https://unimath.github.io/agda-unimath/">Agda Unimath</a>: {{ number_of_links.agda_unimath }} links to documentation in the formal mathematics library.</li>
 </ul>
 
