--- a/web/concepts/templates/index.html
+++ b/web/concepts/templates/index.html
@@ -17,6 +17,8 @@
   <li><a href="https://www.wikidata.org/wiki/Wikidata:Main_Page">Wikidata</a> ({{ number_of_links.wikidata }} entries)</li>
   <li><a href="https://ncatlab.org/nlab/show/HomePage">nLab</a> ({{ number_of_links.nlab }} entries)</li>
   <li><a href="https://mathworld.wolfram.com">Mathworld</a> ({{ number_of_links.mathworld }} entries)</li>
+  <li><a href="https://proofwiki.org/wiki/Main_Page">ProofWiki</a> ({{ number_of_links.proof_wiki }} entries),</li>
+  <li><a href="https://encyclopediaofmath.org/wiki/Main_Page">Encyclopedia of mathematics</a> ({{ number_of_links.encyclopedia_of_mathematics }} entries),</li>
   <li><a href="https://unimath.github.io/agda-unimath/">Agda Unimath</a> ({{ number_of_links.agda_unimath }} entries)</li>
 </ul>
 <p>The entries are organized into a concept network that connects the same concept appearing in different sources.</p>
