--- a/web/concepts/templates/base.html
+++ b/web/concepts/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura.css" type="text/css">
     <link rel="stylesheet" href="{% static 'concepts/mathswitch.css' %}">
     <title>mathswitch</title>
     <meta
@@ -26,7 +26,6 @@
       <p>Supported by the <a href="https://tydiform.fmf.uni-lj.si">TydiForm</a> project at the <a href="https://www.fmf.uni-lj.si/">Faculty of mathematics and physics</a>, University of Ljubljana.
       (<a href="https://github.com/katjabercic/mathswitch/">GitHub repository</a>)
       </p>
-      <p><img class="powered-by-wikidata" alt="Powered by Wikidata" /></p>
     </footer>
   </body>
 </html>
