Add Wikipedia items, query to results page

--- a/web/concepts/templates/index.html
+++ b/web/concepts/templates/index.html
@@ -13,7 +13,8 @@
   <p>Examples:
     <a href="/concept/circuit/">circuit</a>,
     <a href="/concept/mathematical%20group/">mathematical group</a>,
-    <a href="/concept/Stone%20duality/">Stone duality</a>
+    <a href="/concept/Stone%20duality/">Stone duality</a>,
+    <a href="/results/normal">normal</a>
   </p>
 </form>
 
