Finish adding Wikipedia (English)

--- a/web/concepts/templates/index.html
+++ b/web/concepts/templates/index.html
@@ -22,6 +22,7 @@
 <p>Mathswitch collects entries from the following sources:</p>
 <ul>
   <li><a href="https://www.wikidata.org/wiki/Wikidata:Main_Page">Wikidata</a> ({{ number_of_links.wikidata }} entries)</li>
+  <li><a href="https://en.m.wikipedia.org/wiki/Main_Page">Wikipedia (EN)</a> ({{ number_of_links.wikipedia_en }} entries)</li>
   <li><a href="https://ncatlab.org/nlab/show/HomePage">nLab</a> ({{ number_of_links.nlab }} entries)</li>
   <li><a href="https://mathworld.wolfram.com">Mathworld</a> ({{ number_of_links.mathworld }} entries)</li>
   <li><a href="https://proofwiki.org/wiki/Main_Page">ProofWiki</a> ({{ number_of_links.proof_wiki }} entries),</li>
